--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="group9.android_project.ProfileActivity">
 
     <TextView
@@ -14,16 +11,65 @@
         android:text="Username"
         android:id="@+id/labelProfileUsername"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="-2dp"/>
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/btnAddVacation"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_below="@+id/labelProfileUsername">
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:text="Vacations"
-        android:layout_below="@+id/labelProfileUsername"
-        android:id="@+id/btnProfileVacations"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_alignParentTop="true"
+            android:text="Vacations"
+            android:id="@+id/vac1"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="-8.5dp"
+            android:layout_alignParentStart="true" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_marginBottom="-8.5dp"
+            android:layout_height="140dp"
+            android:text="Vacations"
+            android:layout_below="@+id/vac1"
+            android:id="@+id/vac2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_marginBottom="-8.5dp"
+            android:layout_height="140dp"
+            android:text="Vacations"
+            android:layout_below="@+id/vac2"
+            android:id="@+id/vac3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_marginBottom="-8.5dp"
+            android:layout_height="140dp"
+            android:text="Vacations"
+            android:layout_below="@+id/vac3"
+            android:id="@+id/vac4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
+
+</ScrollView>
+
+
 
     <Button
         style="?android:attr/buttonStyleSmall"
