--- a/app/src/main/res/layout/create_acc_layout.xml
+++ b/app/src/main/res/layout/create_acc_layout.xml
@@ -2,70 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/btnCreatAccSubmit"
-        android:layout_marginTop="79dp"
-        android:layout_below="@+id/labelCreateAccPassword"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Firstname:"
-        android:id="@+id/labelCreateAccFirstname"
-        android:layout_marginTop="85dp"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/btnCreatAccSubmit"
-        android:layout_toStartOf="@+id/btnCreatAccSubmit" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Lastname:"
-        android:id="@+id/labelCreateAccLastname"
-        android:layout_below="@+id/labelCreateAccFirstname"
-        android:layout_toLeftOf="@+id/btnCreatAccSubmit"
-        android:layout_toStartOf="@+id/btnCreatAccSubmit"
-        android:layout_marginTop="22dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Email:"
-        android:id="@+id/labelCreateAccEmail"
-        android:layout_marginTop="23dp"
-        android:layout_below="@+id/labelCreateAccLastname"
-        android:layout_alignRight="@+id/labelCreateUsername"
-        android:layout_alignEnd="@+id/labelCreateUsername" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Username:"
-        android:id="@+id/labelCreateUsername"
-        android:layout_below="@+id/labelCreateAccEmail"
-        android:layout_alignLeft="@+id/labelCreateAccLastname"
-        android:layout_alignStart="@+id/labelCreateAccLastname"
-        android:layout_marginTop="25dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Password:"
-        android:id="@+id/labelCreateAccPassword"
-        android:layout_marginTop="49dp"
-        android:layout_below="@+id/labelCreateUsername"
-        android:layout_alignRight="@+id/labelCreateUsername"
-        android:layout_alignEnd="@+id/labelCreateUsername" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,7 +9,162 @@
         android:text="Create Account"
         android:id="@+id/labelCreateAccCreateAcc"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/labelCreateAccCreateAcc"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:layout_marginLeft="57dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="28dp"
+        android:layout_alignParentEnd="false"
+        android:id="@+id/labelCreateAccLayout"
+        android:weightSum="1"
+        android:gravity="right">
+
+        <TextView
+            android:layout_marginBottom="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Username:"
+            android:id="@+id/labelCreateAccUsername" />
+
+        <TextView
+            android:layout_marginBottom="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Password:"
+            android:id="@+id/labelCreateAccPassword" />
+
+        <TextView
+            android:layout_marginBottom="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Confirm Password"
+            android:id="@+id/labelCreateAccCpassword"
+            android:layout_weight="0.43" />
+
+        <TextView
+            android:layout_marginBottom="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Firstname:"
+            android:id="@+id/labelCreateAccFirstname" />
+
+        <TextView
+            android:layout_marginBottom="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Lastname:"
+            android:id="@+id/labelCreateAccLastname" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Email:"
+            android:id="@+id/labelCreateAccEmail"
+            android:layout_gravity="right" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/labelCreateAccCreateAcc"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/labelCreateAccLayout"
+        android:layout_toEndOf="@+id/labelCreateAccLayout"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="10dp"
+        android:id="@+id/inputCreateAccLayout">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText" />
+
+        <EditText
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editText2" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editText6"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/editText3"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText4"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText5" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp" />
+        android:orientation="horizontal"
+        android:layout_marginBottom="55dp"
+        android:weightSum="1"
+        android:gravity="center">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:id="@+id/btnCreateAccBack"
+            android:layout_weight="0.4"
+            android:layout_marginRight="10dp"
+            android:background="#e0e0e0" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Account"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:id="@+id/button5"
+            android:layout_weight="0.4"
+            android:singleLine="false"
+            android:background="#83da8d" />
+        />
+    </LinearLayout>
 
 </RelativeLayout>
