--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -67,5 +67,14 @@
             android:layout_alignEnd="@+id/usernameInput"
             android:layout_marginBottom="30dp" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Account"
+            android:id="@+id/btnLoginCreateAcc"
+            android:layout_alignTop="@+id/btnLoginLogin"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="46dp" />
+
     </RelativeLayout>
 </LinearLayout>
