Simon | New login layout -test

--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_below="@+id/labelHomeUsername"
-        android:text="Profile"
+        android:text="Vacations"
         android:id="@+id/btnHomeProfile"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
