--- a/app/src/main/res/layout/friends_layout.xml
+++ b/app/src/main/res/layout/friends_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
 
     android:paddingTop="@dimen/activity_vertical_margin"
 
@@ -21,12 +21,15 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:text="+"
+
         android:background = "@drawable/roundcorner"
         android:id="@+id/btnFriendsAddFriends"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="15dp"/>
+        android:layout_margin="15dp"
+        android:textSize="30sp"
+        android:textColor="@drawable/btntxtcolor"/>
 
     <ScrollView
         android:layout_below="@+id/labelFriends"
