--- a/app/src/main/res/layout/create_acc_layout.xml
+++ b/app/src/main/res/layout/create_acc_layout.xml
@@ -3,169 +3,119 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@mipmap/backgroundblur">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Create Account"
-        android:id="@+id/labelCreateAccCreateAcc"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true" />
-
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/labelCreateAccCreateAcc"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
-        android:layout_marginLeft="57dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="28dp"
-        android:layout_alignParentEnd="false"
-        android:id="@+id/labelCreateAccLayout"
-        android:weightSum="1"
-        android:gravity="right">
+        android:id="@+id/MainTextHolder"
 
-        <TextView
-            android:layout_marginBottom="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Username:"
-            android:id="@+id/labelCreateAccUsername" />
-
-        <TextView
-            android:layout_marginBottom="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Password:"
-            android:id="@+id/labelCreateAccPassword" />
-
-        <TextView
-            android:layout_marginBottom="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Confirm Password"
-            android:id="@+id/labelCreateAccCpassword"
-            android:layout_weight="0.43" />
-
-        <TextView
-            android:layout_marginBottom="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Firstname:"
-            android:id="@+id/labelCreateAccFirstname" />
-
-        <TextView
-            android:layout_marginBottom="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Lastname:"
-            android:id="@+id/labelCreateAccLastname" />
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="20dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Email:"
-            android:id="@+id/labelCreateAccEmail"
-            android:layout_gravity="right" />
-
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Create Account"
+            android:id="@+id/labelCreateAccCreateAcc"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/labelCreateAccCreateAcc"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/labelCreateAccLayout"
-        android:layout_toEndOf="@+id/labelCreateAccLayout"
-        android:layout_marginRight="20dp"
-        android:layout_marginStart="10dp"
-        android:id="@+id/inputCreateAccLayout">
+        android:layout_below="@+id/MainTextHolder"
+        android:id="@+id/MainContentHolder"
+        android:gravity="center_horizontal">
 
-        <EditText
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Username"
-            android:ems="10"
-            android:id="@+id/etUsername" />
+            android:id="@+id/inputCreateAccLayout"
+            android:background="#50000000"
+            android:padding="20dp">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/etPassword"
-            android:hint="Password"
-            android:layout_gravity="center_horizontal" />
+            <EditText
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="Username"
+                android:ems="10"
+                android:id="@+id/etUsername"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff" />
 
-        <EditText
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/etConfirm"
-            android:hint="Confirm Password"
-            android:layout_gravity="center_horizontal" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/etPassword"
+                android:hint="Password"
+                android:phoneNumber="false"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff" />
 
-        <EditText
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/etFirstname"
-            android:hint="Firstname"
-            android:layout_gravity="center_horizontal"
-            android:inputType="text" />
+            <EditText
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/etConfirm"
+                android:hint="Confirm Password"
+                android:layout_gravity="center_horizontal"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff" />
 
-        <EditText
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Lastname"
-            android:id="@+id/etLastname"
-            android:inputType="text" />
+            <EditText
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/etFirstname"
+                android:hint="Firstname"
+                android:layout_gravity="center_horizontal"
+                android:inputType="text"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:ellipsize="start"
-            android:gravity="center|center_horizontal"
-            android:hint="Email"
-            android:id="@+id/etEmail" />
+            <EditText
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Lastname"
+                android:id="@+id/etLastname"
+                android:inputType="text"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:ellipsize="start"
+                android:hint="Email"
+                android:id="@+id/etEmail"
+                android:textColorHint="#ffffff" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/MainContentHolder"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_marginBottom="55dp"
         android:weightSum="1"
-        android:gravity="center">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Back"
-            android:id="@+id/btnCreateAccBack"
-            android:layout_weight="0.4"
-            android:layout_marginRight="10dp"
-            android:background="#e0e0e0" />
+        android:gravity="center"
+        android:id="@+id/CreateAccBtnHolder">
 
         <Button
             android:layout_width="wrap_content"
