--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -20,13 +20,13 @@
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
                 android:ems="10"
                 android:id="@+id/etUsername"
                 android:hint="Username"
                 android:textColor="#ffffff"
                 android:autoText="false"
-                android:textColorHint="#ffffff" />
+                android:textColorHint="#ffffff"
+                android:inputType="text" />
 
             <EditText
                 android:layout_width="fill_parent"
