--- a/app/src/main/res/layout/create_acc_layout.xml
+++ b/app/src/main/res/layout/create_acc_layout.xml
@@ -102,7 +102,8 @@
                 android:ellipsize="start"
                 android:hint="Email"
                 android:id="@+id/etEmail"
-                android:textColorHint="#ffffff" />
+                android:textColorHint="#ffffff"
+                android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
 
