--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -45,4 +45,12 @@
         android:textSize="12sp"
         android:text="Username" />
 
+    Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:id="@+id/btnDelete"
+        android:layout_toRightOf="@+id/tvLastname"
+        android:layout_marginLeft="50dp" />
+
 </RelativeLayout>
