--- a/app/src/main/res/layout/item_vacation.xml
+++ b/app/src/main/res/layout/item_vacation.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="#44bd79"
-        android:gravity="center_vertical|center_horizontal">
+        android:layout_height="match_parent"
+        android:weightSum="1">
+
+        <ImageView
+            android:scaleType="centerCrop"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:id="@+id/ivImage"
+            android:layout_gravity="center_horizontal"
+            android:background="@mipmap/test" />
 
         <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="55dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Magaluf"
+            android:text="Medium Text"
             android:id="@+id/tvVacationname"
+            android:textColor="#ffffff"
+            android:layout_marginTop="-117dp"
+            android:background="#e7000000"
             android:layout_gravity="center_horizontal"
-            android:background="#7df1f1f1"
-            android:padding="15dp"
-            android:textSize="25dp"
-            android:gravity="center|center_vertical" />
+            android:gravity="center_vertical|center_horizontal" />
     </LinearLayout>
 </RelativeLayout>
