--- a/app/src/main/res/layout/myuser_layout.xml
+++ b/app/src/main/res/layout/myuser_layout.xml
@@ -16,8 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Firstname Lastname"
-            android:id="@+id/tvName" />
+            android:text="Welcome"
+            android:id="@+id/tvWelcome" />
 
         <TextView
             android:layout_width="wrap_content"
