--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/etUsername"
-                android:hint="Username"
+                android:hint="Enter username"
                 android:textColor="#ffffff"
                 android:autoText="false"
                 android:textColorHint="#ffffff"
@@ -35,7 +35,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/etPassword"
-                android:hint="Password"
+                android:hint="Enter password"
                 android:textColor="#ffffff"
                 android:textColorHint="#ffffff"
                 android:text="hahahaha" />
