--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,10 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#4261a1</color>
+
+    <color name="tabUnselected">#f4f4f4</color>
+    <color name="tabSelected">#f1f1f1</color>
+
+
 </resources>
